# Restaurant_system

./: .gitignore  CMakeLists.txt  README.md  config.ini
assets/styles/: app.css
include/: app_context.h
include/core/: auth_service.h  order_service.h  report_service.h
include/data/: dao.h  database.h
include/ui/: main_window.h
include/util/: config.h  hash.h  i18n.h  logger.h
migrations/: 001_base.sql
po/: en.txt  es.txt
scripts/: bootstrap_db.sh
src/: main.c
src/core/: auth_service.c  order_service.c  report_service.c
src/data/: dao.c  database.c
src/ui/: main_window.c
src/util/: config.c  hash.c  i18n.c  logger.c
tests/: CMakeLists.txt  test_config.c
